# ShelfSense

./: .gitignore  .shelfsense.db  README.md  alembic.ini  database.py  main.py  models.py  phase1.py  phase2.py  phase3.py  pyproject.toml  schemas.py  try_phase3.py  try_schemas.py
alembic/: env.py
alembic/versions/: 1ac80364db33_create_warehouses_table.py  381e8b395e3e_noop_check.py  41423f85a629_create_tasks_table.py  4f54cf8f1088_create_users_table.py  8104aea2e1ba_create_layouts_table.py  9b2fb6bfe860_create_warehouses_table_real.py
app/: auth.py  database.py  heatmap.py  main.py  models.py  phase1.py  phase2.py  phase3.py  scale.py  schemas.py  worker.py
app/api/: auth.py  optimize.py  warehouse.py
frontend/: package-lock.json  package.json
frontend/src/: Analytics.jsx  App.jsx  Dashboard.jsx  Login.jsx  Optimize.jsx  Twin.jsx  Upload.jsx  api.js
ml/: first_inference.py  try_real_phase1.py
ml/training/: ShelfSense.ipynb
static/: twin.html
tests/: fixtures.py  test_phase2.py  test_phase3.py  test_scale.py  test_schemas.py
