[project]
name = "shelfsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "celery[redis]>=5.6.3",
    "fastapi>=0.139.0",
    "ortools>=9.15.6755",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
